gitops-removed/directus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus
  namespace: directus
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - cacha.sredevops.org
    secretName: sredevops-org-tls
  rules:
  - host: cacha.sredevops.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: directus
            port:
              number: 8055
